Time: 26 ms (92.19%), Space: 51.6 MB (44.92%) - LeetHub